# pathtracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.hpp  color.hpp  common.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main.cpp  material.hpp  ray.hpp  sphere.hpp  vec3.hpp
include/: common.hpp  material.hpp  sphere.hpp
